# cli

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  nilla.nix  package-lock.json  package.json  tsconfig.json  vite.config.ts
completions/: _nilla.zsh  nilla.bash  nilla.elv  nilla.fish
nilla-cli-def/: Cargo.toml
nilla-cli-def/src/: lib.rs
nilla-cli-def/src/commands/: build.rs  mod.rs  plugins.rs  run.rs  shell.rs  show.rs
nilla-cli-def/src/commands/nixos/: index.ts
nilla-cli-def/src/commands/shell/: index.ts
npins/: sources.json
src/: args.ts  help.ts  index.ts  lib.rs  main.rs
src/commands/: build.rs  completions.rs  generate.rs  index.ts  mod.rs  nixos.rs  plugins.rs  run.rs  shell.rs  show.rs
src/commands/nixos/: args.ts  help.ts
src/commands/run/: help.ts  index.ts
src/commands/shell/: help.ts
src/util/: exec.ts  git.rs  log.ts  mod.rs  nix.rs  nix.ts  plugin_metadata.rs  plugins.rs  project.rs  project.ts  search.rs  spawn.ts
src/util/help/: common.ts  project.ts  sources.ts
