[package]
name = "nilla"
version = "0.0.1-alpha.1"
edition = "2024"
author = "Nilla-Nix"
repository = "https://github.com/nilla-nix/cli"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.47"
clio = { version = "0.3.5", features = ["clap-parse"] }
log = "0.4.26"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"

[build-dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.47"
clap_mangen = "0.2.26"
clio = { version = "0.3.5", features = ["clap-parse"] }
log = "0.4.26"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
