[package]
name = "nilla"
version = "0.0.1-alpha.1"
edition = "2024"
author = "Nilla-Nix"
repository = "https://github.com/nilla-nix/cli"

[dependencies]
nilla-cli-def = { version = "0.0.1-alpha.1", path = "./nilla-cli-def" }
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
log = "0.4.26"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"

[build-dependencies]
nilla-cli-def = { version = "0.0.1-alpha.1", path = "./nilla-cli-def" }
clap = { version = "4.5.32", features = ["derive"] }
clap_mangen = "0.2.26"
